# vulnerable-kubernetes-deployments

./: .gitignore  404.html  README.md  index.html  sitemap.xml
.github/worfklows/: publish-docker-image-phpmyadmin.yaml
.github/workflows/: docs-publish.yaml  publish-docker-image-hello-express-node20-bullseye.yaml  publish-docker-image-hello-fastapi-python3.9.yaml  publish-docker-image-hello-flask-python3.10.yaml  publish-docker-image-hello-flask-python3.13.yaml  publish-docker-image-hello-flask-python3.9.yaml  publish-docker-image-hello-flask.yaml  publish-docker-image-my-nextjs-js-app-node20-bullseye.yaml  publish-docker-image-my-nextjs-ts-app-node20-bullseye.yaml  publish-docker-image-nextjs-my-app-node20-bullseye.yaml  publish-docker-image-pgadmin.yaml  publish-docker-image-phpmyadmin.yaml  publish-docker-image-python-hello-fastapi.yaml  publish-docker-image-vulnerable-next-server-node20-bullseye.yaml
docs/: hello-flask.md  mkdocs.yml  pyproject.toml
docs/src/: dotnet-eshop.md  hello-fastapi.md  hello-flask.md  index.md  pgadmin.md  pygoat.md  railsgoat.md
dotnet-eshop/: index.html
examples/pyroscope/: pyroscope.yaml
examples/python/: README.md
examples/python/hello-flask-python3.9/: app.py  pyproject.toml
examples/python/hello-flask-python3.9/deploy/kubernetes/: all.yaml
examples/python/hello-flask-python3.9/hack/: import-image-to-containerd.sh
hello-fastapi/: index.html
hello-flask/: index.html
pgadmin/: index.html
php/wordpress-jit/: Dockerfile  all.yaml
pygoat/: index.html
railsgoat/: index.html
search/: search_index.json
(+257 files in other folders)
