[project]
name = "hello-flask-python3.9"
version = "0.1.0"
description = "Descriptions are for wimps"
readme = "README.md"
requires-python = "~=3.9.0"
dependencies = [
    "flask>=3.1.1",
    "pyroscope-io>=0.8.11",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
